--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wc-menu-button",
-  "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "version": "1.0.1",
+  "description": "A simple, animating menu button built as a Web Component",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
   "types": "dist/types/components.d.ts",
@@ -13,7 +13,8 @@
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll"
+    "test.watch": "stencil test --spec --e2e --watchAll",
+    "publish": "npm build && npm publish --access=public"
   },
   "dependencies": {},
   "devDependencies": {
