--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "wc-menu-button",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A simple, animating menu button built as a Web Component",
+  "keywords": [
+    "web component",
+    "hamburger",
+    "menu",
+    "animating",
+    "web-component"
+  ],
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
   "types": "dist/types/components.d.ts",
